--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Interactif - Ondes Gravitationnelles</title>
+    <title>CV Interactif - Gaspar Evva </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,7 +44,7 @@
 </header>
 
 <div class="container">
-    <p>Explorez mon parcours à travers un jeu interactif sur les ondes gravitationnelles. Cliquez sur le bouton ci-dessous pour commencer.</p>
+    <p><p>Bienvenue sur mon CV interactif. Cliquez sur le bouton ci-dessous pour découvrir mon parcours.</p></p>
     <a class="btn-game" href="game.html">Commencer le jeu</a>
 </div>
 
